<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Akirachix</string>
    <string name="action_settings">Settings</string>
    <string name="helloworld">hello world</string>
    <string name="buttonlogin">Login</string>
    <string name="buttonregister">Register</string>
    <string name="firstname">First Name</string>
    <string name="secondname">Second Name</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="buttonSubmit">Submit</string>
    <string name="buttonCancel">Cancel</string>
     <string name="btntrycommand">Try command</string>
      <string name="tbpassword">Toggle Button</string>
    <string name="titlue_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_homescreen">Homescreen</string>
   
</resources>
