<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/umb" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" 
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_margin="20dp" />

    <EditText
        android:id="@+id/etlogemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="#FFFFFF"
        android:layout_margin="8dp"
        >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_margin="15dp"
        android:gravity="center"
          />

    

    <EditText
        android:id="@+id/etlogpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="#FFFFFF"
        android:layout_margin="8dp"
        android:password="true"/>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/btnresult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/btntrycommand" />
    
          <ToggleButton
        android:id="@+id/tbpassword"
        android:paddingBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_weight="80"
        android:text="@string/tbpassword" />
</LinearLayout>
    
    
    
      <Button
        android:id="@+id/btnlogCancel"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/buttonCancel"
        android:textColor="#000000"
        android:textSize="25sp"
         />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/buttonlogin"
        android:textColor="#000000"
        android:textSize="25sp" />
    

</LinearLayout>
